--- a/SpringSecure/Dockerfile
+++ b/SpringSecure/Dockerfile
@@ -1,8 +1,13 @@
-FROM openjdk:8-jdk-alpine
 
-# install bash --> commented because I just need /bin/sh which is already provided by the base image
-#RUN apk add --no-cache bash
-RUN /bin/sh -c "./mvnw clean install"
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+FROM maven:3.6.0-jdk-11-slim AS build
+COPY src /home/app/src
+COPY pom.xml /home/app
+RUN mvn -f /home/app/pom.xml clean package
+
+#
+# Package stage
+#
+FROM openjdk:11-jre-slim
+COPY --from=build /home/app/target/*.jar /usr/local/lib/demo.jar
+EXPOSE 8080
+ENTRYPOINT ["java","-jar","/usr/local/lib/demo.jar"]
